--- a/connexion/connexion.css
+++ b/connexion/connexion.css
@@ -8,32 +8,37 @@
 .image{
     text-align: center;
 }
+
 input[type="email"],input[type="password"]{
-    width: 450px;
+    width: 400px;
 }
 
 .col-md-12{
     width: 450px;
-    
 }
+
+.container1{
+    margin: 0 auto;
+    width: 400px;
+}
+
 button{
     background-color: blue;
     color: white;
     border: 1px solid blue;
     border-radius: 10px;
+    width: 400px;
 }
-.container{
-    margin-left: 450px;
-    }
+
+
 .text1{
-    margin-right: 200px;
-    width: 500px;
+    text-align: center;
 }
-a{
+
+.motpass a{
     text-decoration: none;
-    margin-left: 150px;
+    text-align: center;
 }
 .forme{
  margin-top: 30px;
-
 }
