--- a/page_accueil/styles.css
+++ b/page_accueil/styles.css
@@ -1,3 +1,10 @@
+
+html {
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+    scroll-padding-top: 76px;
+    transition: scroll-snap-align 10s ease-in-out;
+}
 .header-nav {
     width: 90%;
     margin: 0 10%;
@@ -22,6 +29,15 @@
     place-content: center;
     color: white;
     text-align: center;
+}
+.banner div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 400px;
 }
 .banner span {
     font-size: 4em;
